remove css animations because they killed performance

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -17,11 +17,11 @@
     clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%)
     transition: 1.5s
 
-    &:hover
-      transform: scale(0.975)
-      //background-color: #131313
-      //background-color: lime
-      transition: 0s
+    //&:hover
+    //  transform: scale(0.975)
+    //  //background-color: #131313
+    //  //background-color: lime
+    //  transition: 0s
 
 .row
   display: inline-flex
