--- a/src/app/glow/glow.component.sass
+++ b/src/app/glow/glow.component.sass
@@ -5,15 +5,15 @@
   filter: blur(75px)
   border-radius: 100%
 
-  &.shimmer
-    animation-name: shimmer
-    animation-duration: 5s
-    animation-iteration-count: infinite
-    animation-timing-function: ease-in-out
-    animation-direction: alternate
-
-@keyframes shimmer
-  from
-    transform: scale(0.8)
-  to
-    transform: scale(1)
+//  &.shimmer
+//    animation-name: shimmer
+//    animation-duration: 5s
+//    animation-iteration-count: infinite
+//    animation-timing-function: ease-in-out
+//    animation-direction: alternate
+//
+//@keyframes shimmer
+//  from
+//    transform: scale(0.8)
+//  to
+//    transform: scale(1)
